--- a/public/admin.html
+++ b/public/admin.html
@@ -782,17 +782,17 @@
         </div>
       
         <div id="view-admin-twitch-rewards" class="view hidden">
-          <div class="page-header">
-            <button class="back-button" data-view="view-admin-main">
-              <i class="fa-solid fa-arrow-left"></i> Назад
-            </button>
-            <h1 class="page-header-title">Twitch награды</h1>
-            <div style="width: 60px;"></div>
-          </div>
+            <div class="page-header">
+                <button class="back-button" data-view="view-admin-main">
+                    <i class="fa-solid fa-arrow-left"></i> Назад
+                </button>
+                <h1 class="page-header-title">Twitch награды</h1>
+                <div style="width: 60px;"></div>
+            </div>
 
-          <div class="quests-container" id="twitch-rewards-list">
-            <!-- Сюда подгрузим список наград -->
-          </div>
+            <div id="twitch-rewards-container" class="quests-container">
+                <!-- Сюда будут подгружаться награды -->
+            </div>
         </div>
     </main>
 
@@ -1252,6 +1252,66 @@
                  console.error("Не удалось загрузить настройки:", e);
                  tg.showAlert("Не удалось загрузить настройки.");
             }
+        }
+
+        // --- Twitch Rewards ---
+        async function loadTwitchRewards() {
+            const container = document.getElementById("twitch-rewards-container");
+            container.innerHTML = "<p>Загрузка...</p>";
+
+            try {
+                const resp = await fetch("/rest/v1/twitch_rewards?select=id,title,is_active", {
+                    headers: { "apikey": SUPABASE_KEY, "Authorization": `Bearer ${SUPABASE_KEY}` }
+                });
+                const rewards = await resp.json();
+
+                container.innerHTML = "";
+                rewards.forEach(r => {
+                    const card = document.createElement("div");
+                    card.className = "quest-card manage-quest-card";
+                    card.innerHTML = `
+                        <h3 class="quest-title">${r.title}</h3>
+                        <div class="admin-buttons-wrapper">
+                            <button class="admin-view-subs-btn" onclick="openTwitchPurchases(${r.id})">Просмотреть покупки</button>
+                        </div>
+                    `;
+                    container.appendChild(card);
+                });
+            } catch (e) {
+                container.innerHTML = "<p>Ошибка загрузки наград</p>";
+                console.error(e);
+            }
+        }
+
+        async function openTwitchPurchases(rewardId) {
+            const listEl = document.getElementById("twitch-purchases-list");
+            listEl.innerHTML = "<p>Загрузка...</p>";
+
+            try {
+                const resp = await fetch(`/api/v1/admin/twitch_rewards/${rewardId}/purchases`);
+                const data = await resp.json();
+
+                if (!data.purchases || data.purchases.length === 0) {
+                    listEl.innerHTML = "<p>Нет покупок для этой награды.</p>";
+                } else {
+                    listEl.innerHTML = data.purchases.map(p => `
+                        <div class="submission-item">
+                            <p><strong>${p.username}</strong> (ID: ${p.user_id})</p>
+                            <p>Трейд: <a href="${p.trade_link}" target="_blank">${p.trade_link}</a></p>
+                            <p><small>${new Date(p.created_at).toLocaleString()}</small></p>
+                        </div>
+                    `).join("");
+                }
+
+                document.getElementById("twitch-purchases-modal").classList.remove("hidden");
+            } catch (e) {
+                listEl.innerHTML = "<p>Ошибка загрузки покупок</p>";
+                console.error(e);
+            }
+        }
+
+        function closeTwitchPurchasesModal() {
+            document.getElementById("twitch-purchases-modal").classList.add("hidden");
         }
 
         function renderQuests(quests, categories) {
@@ -1850,6 +1910,18 @@
       // Автозагрузка при переходе в раздел
       document.querySelector("[data-view='view-admin-twitch-rewards']")
         .addEventListener("click", loadTwitchRewards);
+    <!-- Модальное окно покупок Twitch награды -->
+    <div id="twitch-purchases-modal" class="modal-overlay hidden">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Покупки награды</h2>
+                <button class="modal-close-btn" onclick="closeTwitchPurchasesModal()">&times;</button>
+            </div>
+            <div class="modal-body" id="twitch-purchases-list">
+                <!-- Список покупок подгружается сюда -->
+            </div>
+        </div>
+    </div>
     </script>
 </body>
 </html>
