--- a/public/admin.html
+++ b/public/admin.html
@@ -1274,6 +1274,16 @@
                     card.innerHTML = `
                         <h3 class="quest-title">${r.title}</h3>
                         <div class="admin-buttons-wrapper">
+                            <label>
+                                Активна:
+                                <input type="checkbox" ${r.is_active ? "checked" : ""} 
+                                    onchange="updateTwitchReward(${r.id}, 'is_active', this.checked)">
+                            </label>
+                            <label>
+                                Уведомлять админов:
+                                <input type="checkbox" ${r.notify_admin ? "checked" : ""} 
+                                    onchange="updateTwitchReward(${r.id}, 'notify_admin', this.checked)">
+                            </label>
                             <button class="admin-view-subs-btn" onclick="openTwitchPurchases(${r.id})">Просмотреть покупки</button>
                         </div>
                     `;
