--- a/public/admin.html
+++ b/public/admin.html
@@ -1261,7 +1261,7 @@
         // --- Twitch Rewards ---
         async function loadTwitchRewards() {
             try {
-                const rewards = await makeApiRequest('/api/v1/admin/twitch_rewards', {}, 'POST', true);
+                const rewards = await makeApiRequest('/api/v1/admin/twitch_rewards/list', {}, 'GET', true);
                 const container = document.getElementById('twitch-rewards-container');
                 container.innerHTML = '';
 
