--- a/public/admin.html
+++ b/public/admin.html
@@ -1259,18 +1259,27 @@
         }
 
         // --- Twitch Rewards ---
-         async function loadTwitchRewards() {
+        async function loadTwitchRewards() {
+            const container = document.getElementById('twitch-rewards-container');
+            container.innerHTML = '<p>Загрузка...</p>';
+
             try {
-                // загружаем список наград
-                const rewards = await makeApiRequest('/api/v1/admin/twitch_rewards/list', {}, 'GET', true);
-                const container = document.getElementById('twitch-rewards-container');
+                // 1) грузим список наград (GET, без тела)
+                const resp = await fetch('/api/v1/admin/twitch_rewards/list', { method: 'GET' });
+                if (!resp.ok) {
+                    const t = await resp.text().catch(() => '');
+                    throw new Error(`HTTP ${resp.status} /list: ${t}`);
+                }
+                const rewards = await resp.json();
+
                 container.innerHTML = '';
 
-                if (!rewards || rewards.length === 0) {
+                if (!Array.isArray(rewards) || rewards.length === 0) {
                     container.innerHTML = '<p style="text-align: center; color: var(--text-color-muted);">Наград пока нет.</p>';
                     return;
                 }
 
+                // 2) отрисовываем карточки
                 rewards.forEach(r => {
                     const cardHtml = `
                         <div class="quest-card manage-quest-card" data-id="${r.id}">
@@ -1290,56 +1299,56 @@
                                 </label>
                             </div>
                             <div class="admin-buttons-wrapper" style="margin-top: 10px;">
-                                <button class="admin-view-subs-btn" onclick="openTwitchPurchases(${r.id})">
-                                    Покупки
-                                </button>
+                                <button class="admin-view-subs-btn" data-open-purchases="${r.id}">Покупки</button>
                             </div>
                         </div>
                     `;
                     container.insertAdjacentHTML('beforeend', cardHtml);
                 });
 
-                // переключение "Активна"
-                document.querySelectorAll('.reward-toggle-active').forEach(chk => {
-                    chk.addEventListener('change', async (e) => {
-                        const rewardId = e.target.dataset.id;
-                        const isActive = e.target.checked;
-                        try {
-                            await makeApiRequest('/api/v1/admin/twitch_rewards/update', {
-                                id: rewardId,
-                                is_active: isActive
-                            }, 'POST', true);
-                        } catch (err) {
-                            console.error("Ошибка обновления is_active:", err);
-                            e.target.checked = !isActive; // откат при ошибке
+                // 3) навешиваем обработчики ОДИН раз (делегирование на контейнер)
+                if (!container.dataset.listenersBound) {
+                    container.addEventListener('change', async (e) => {
+                        const el = e.target;
+                        if (!(el instanceof HTMLInputElement)) return;
+
+                        if (el.classList.contains('reward-toggle-active') || el.classList.contains('reward-toggle-notify')) {
+                            const rewardId = parseInt(el.dataset.id, 10);
+                            const key = el.classList.contains('reward-toggle-active') ? 'is_active' : 'notify_admin';
+                            const prevChecked = !el.checked; // чтобы откатить при ошибке
+
+                            try {
+                                const upd = await fetch('/api/v1/admin/twitch_rewards/update', {
+                                    method: 'POST',
+                                    headers: { 'Content-Type': 'application/json' },
+                                    body: JSON.stringify({ id: rewardId, [key]: el.checked })
+                                });
+                                if (!upd.ok) {
+                                    const t = await upd.text().catch(() => '');
+                                    throw new Error(`HTTP ${upd.status} /update: ${t}`);
+                                }
+                            } catch (err) {
+                                console.error('Ошибка обновления награды:', err);
+                                el.checked = prevChecked; // откат чекбокса при фейле
+                            }
                         }
                     });
-                });
 
-                // переключение "Уведомлять админа"
-                document.querySelectorAll('.reward-toggle-notify').forEach(chk => {
-                    chk.addEventListener('change', async (e) => {
-                        const rewardId = e.target.dataset.id;
-                        const notify = e.target.checked;
-                        try {
-                            await makeApiRequest('/api/v1/admin/twitch_rewards/update', {
-                                id: rewardId,
-                                notify_admin: notify
-                            }, 'POST', true);
-                        } catch (err) {
-                            console.error("Ошибка обновления notify_admin:", err);
-                            e.target.checked = !notify; // откат при ошибке
-                        }
+                    container.addEventListener('click', (e) => {
+                        const btn = e.target.closest('[data-open-purchases]');
+                        if (!btn) return;
+                        const rid = btn.getAttribute('data-open-purchases');
+                        openTwitchPurchases(rid);
                     });
-                });
 
+                    container.dataset.listenersBound = '1';
+                }
             } catch (e) {
-                console.error("Ошибка загрузки Twitch наград:", e);
-                const container = document.getElementById('twitch-rewards-container');
+                console.error('Ошибка загрузки Twitch наград:', e);
                 container.innerHTML = '<p style="text-align: center; color: var(--danger-color);">Ошибка загрузки наград.</p>';
             }
         }
-      
+
         async function openTwitchPurchases(rewardId) {
             const modal = document.getElementById("twitch-purchases-modal");
             const listEl = modal.querySelector(".modal-body");
