--- a/public/admin.html
+++ b/public/admin.html
@@ -241,15 +241,17 @@
     /* Twitch награды: компактная сетка */
     #twitch-rewards-container {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); /* гибкая сетка */
-        gap: 10px;
+        grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+        gap: 8px; /* меньше расстояние между карточками */
     }
 
-    #twitch-rewards-container .quest-card {
-        padding: 8px;
-        font-size: 12px;
-        border-radius: 8px;
-        text-align: center; /* выравнивание */
+    #twitch-rewards-container .quest-title {
+        display: block;
+        width: 100%;               /* занимает всю ширину */
+        text-align: center;
+        font-size: 11px;           /* ещё меньше заголовок */
+        font-weight: 600;
+        margin: 0 0 6px 0;         /* меньше отступ снизу */
     }
 
     #twitch-rewards-container .quest-title {
@@ -268,15 +270,16 @@
     .setting-item,
     .reward-setting-item {
         display: flex;
-        flex-direction: column; /* тумблер под подписью */
-        align-items: center;
-        gap: 4px;
-        margin: 6px 0;
+        flex-direction: column;    /* подпись над тумблером */
+        align-items: center;       /* центрируем */
+        gap: 3px;                  /* минимальный отступ */
+        margin: 4px 0;             /* меньше вертикальный отступ */
     }
+
 
     .setting-label,
     .reward-setting-label {
-        font-size: 12px;
+        font-size: 11px;           /* подпись маленькая */
         font-weight: 500;
         text-align: center;
     }
@@ -323,7 +326,7 @@
     }
 
     .toggle-switch input:checked + .toggle-slider:before {
-        transform: translateX(12px);
+        transform: translateX(11px);
     }
   </style>
 </head>
