--- a/public/admin.html
+++ b/public/admin.html
@@ -886,7 +886,7 @@
                     <h3 class="quest-title">Награда 1</h3>
 
                     <div class="reward-setting-item">
-                        <span class="reward-setting-label">Активна</span>
+                        <span class="reward-setting-label">Активна в логах</span>
                         <label class="toggle-switch">
                             <input type="checkbox" checked>
                             <span class="toggle-slider"></span>
@@ -906,7 +906,7 @@
                     <h3 class="quest-title">Награда 2</h3>
 
                     <div class="reward-setting-item">
-                        <span class="reward-setting-label">Активна</span>
+                        <span class="reward-setting-label">Активна в логах</span>
                         <label class="toggle-switch">
                             <input type="checkbox">
                             <span class="toggle-slider"></span>
@@ -926,7 +926,7 @@
                     <h3 class="quest-title">Награда 3</h3>
 
                     <div class="reward-setting-item">
-                        <span class="reward-setting-label">Активна</span>
+                        <span class="reward-setting-label">Активна в логах</span>
                         <label class="toggle-switch">
                             <input type="checkbox" checked>
                             <span class="toggle-slider"></span>
