--- a/public/admin.html
+++ b/public/admin.html
@@ -1435,7 +1435,7 @@
                         <div class="quest-card manage-quest-card" data-id="${r.id}">
                             <h3 class="quest-title">${r.title}</h3>
                             <div class="setting-item">
-                                <span class="setting-label">Активна</span>
+                                <span class="setting-label">Активна в логах</span>
                                 <label class="toggle-switch">
                                     <input type="checkbox" class="reward-toggle-active" data-id="${r.id}" ${r.is_active ? 'checked' : ''}>
                                     <span class="toggle-slider"></span>
